submission method (nearly finish), done: C/C++, Js